# langchain_rss_news

./: .env  .gitignore  main.py  pyproject.toml
chromadb_rss/: chroma.sqlite3
chromadb_rss/bf49aa5e-6683-41e6-8a8b-87659761d35b/: index_metadata.pickle
tools/: ChromaDBHandler.py  ChromaHandler.py  chat_with_rss_news.py  rssfeeder.py  save_to_text.py  sqliteDBHandler.py  webscraper.py
